# sgx-dcap-quote-verifier

./: Cargo.toml
sgx-dcap-quote-verifier/: Cargo.toml
sgx-dcap-quote-verifier-service/: Cargo.toml
sgx-dcap-quote-verifier-service/src/: main.rs
sgx-dcap-quote-verifier-tool/: Cargo.toml
sgx-dcap-quote-verifier-tool/src/: main.rs
sgx-dcap-quote-verifier/src/: lib.rs  main.rs
