[package]
name = "sgx-dcap-quote-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
intel-tee-quote-verification-rs = "0.3.0"
intel-tee-quote-verification-sys = "0.2.1"
